<resources>
    <string name="app_name">TrackMeMore</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="sign_in">Sign-in</string>
    <string name="write">Write</string>
    <string name="sign_up">Sign-up</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="track_me">Start</string>
    <string name="tracking">Tracking...</string>
    <string name="welcome">TrackMe!</string>
    <string name="trackingResult">Results</string>
    <string name="acceleration">Acceleration</string>
    <string name="breaks">Breaks</string>
    <string name="pit">Pit</string>
    <string name="speed_violation">Speed Violation</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="type">Type</string>
    <string name="timestamp">Timestamp</string>
    <string name="show_in_google_maps">Show in Google Maps</string>
    <string name="tracking_list_title">Results</string>
</resources>